--- a/src/nginx.conf.template
+++ b/src/nginx.conf.template
@@ -24,7 +24,7 @@ server {
         try_files $uri $uri/ =404; 
     }
 
-    location /api {
+    location ~ /api$ {
         proxy_pass {{controller_ws_api}};
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
