--- a/k8s-charm/metadata.yaml
+++ b/k8s-charm/metadata.yaml
@@ -1,19 +1,13 @@
-# Copyright 2021 Ubuntu
-# See LICENSE file for licensing details.
-name: k8s-charm
+name: juju-dashboard
 description: |
-  TEMPLATE-TODO: fill out the charm's description
+  Kubernetes Charm for the Juju Dashboard
 summary: |
-  TEMPLATE-TODO: fill out the charm's summary
-
-# TEMPLATE-TODO: replace with containers for your workload (delete for non-k8s)
-containers:
-  httpbin:
-    resource: httpbin-image
-
-# TEMPLATE-TODO: each container defined above must specify an oci-image resource
-resources:
-  httpbin-image:
-    type: oci-image
-    description: OCI image for httpbin (kennethreitz/httpbin)
-
+  Kubernetes Charm for the Juju Dashboard
+series:
+  - kubernetes
+provides:
+  dashboard:
+    interface: http
+requires:
+  controller:
+    interface: juju-dashboard
