--- a/machine-charm/metadata.yaml
+++ b/machine-charm/metadata.yaml
@@ -1,11 +1,17 @@
 # Copyright 2021 Canonical
 # See LICENSE file for licensing details.
 name: juju-dashboard
+display-name: |
+  Charm for Juju Dashboard
 description: |
   Charm for the Juju Dashboard
 summary: |
   Charm for the Juju Dashboard
-series: [focal]
+bases:
+  - name: ubuntu
+    channel: focal
+    architectures:
+      - amd64
 provides:
   dashboard:
     interface: http
