--- a/k8s-charm/config.yaml
+++ b/k8s-charm/config.yaml
@@ -1,4 +1,4 @@
+# Copyright 2022 Canonical Ltd.
+# See LICENSE file for licensing details.
+
 options:
-  image:
-    type: string
-    default: canonicalwebteam/jaas-dashboard:latest
