--- a/k8s-charm/metadata.yaml
+++ b/k8s-charm/metadata.yaml
@@ -1,13 +1,28 @@
+# Copyright 2022 Penelope Valentine Gale
+# See LICENSE file for licensing details.
+
 name: juju-dashboard
 description: |
   Kubernetes Charm for the Juju Dashboard
 summary: |
   Kubernetes Charm for the Juju Dashboard
-series:
-  - kubernetes
+
+containers:
+  dashboard:
+    resource: dashboard-image
+
+resources:
+  dashboard-image:
+    type: oci-image
+    description: |
+      Canonical build of the dashboard (canonicalwebteam/jaas-dashboard:latest)
+    
 provides:
   dashboard:
     interface: http
+
 requires:
   controller:
     interface: juju-dashboard
+    
+
