Updated sidecar charm.
Passes lint, plus really basic unit test that was already in place
passes.

Next steps: actually add some proper testing :-)

--- a/k8s-charm-sidecar/metadata.yaml
+++ b/k8s-charm-sidecar/metadata.yaml
@@ -1,7 +1,7 @@
 # Copyright 2022 Penelope Valentine Gale
 # See LICENSE file for licensing details.
 
-name: juju-dashboard
+name: juju-dashboard-k8s
 description: |
   Kubernetes Charm for the Juju Dashboard
 summary: |
