--- a/machine-charm/config.yaml
+++ b/machine-charm/config.yaml
@@ -18,3 +18,6 @@ options:
     default: 8080
     description: The port to serve the dashboard on.
     type: int
+  dns-name:
+    description: DNS of the Juju dashboard.
+    type: string
