Fixed up machine charm test and tox.ini
There's not much in terms of tests. But at least they can be run now. :-)

--- a/machine-charm/tox.ini
+++ b/machine-charm/tox.ini
@@ -72,5 +72,6 @@ deps =
      pytest
      pytest-operator
      ipdb
+     -r{toxinidir}/requirements.txt
 commands =
     pytest -v --tb native --ignore={[vars]tst_dir}unit --log-cli-level=INFO -s {posargs}
