Fix copyright notices

--- a/k8s-charm/metadata.yaml
+++ b/k8s-charm/metadata.yaml
@@ -1,4 +1,4 @@
-# Copyright 2022 Penelope Valentine Gale
+# Copyright 2022 Canonical Ltd.
 # See LICENSE file for licensing details.
 
 name: juju-dashboard-k8s
