--- a/k8s-charm/metadata.yaml
+++ b/k8s-charm/metadata.yaml
@@ -2,6 +2,9 @@
 # See LICENSE file for licensing details.
 
 name: juju-dashboard-k8s
+assumes:
+- k8s-api
+- juju >= 3.0
 description: |
   Kubernetes Charm for the Juju Dashboard
 summary: |
