Handle commands endpoint.

--- a/machine-charm/src/nginx.conf.template
+++ b/machine-charm/src/nginx.conf.template
@@ -37,4 +37,12 @@ server {
         proxy_set_header Connection $connection_upgrade;
         proxy_set_header Host $host;
     }
+
+    location ~ /commands$ {
+        proxy_pass {{controller_ws_api}};
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection $connection_upgrade;
+        proxy_set_header Host $host;
+    }
 }
