Improve metadata.yaml and add icon.svg

--- a/k8s-charm/metadata.yaml
+++ b/k8s-charm/metadata.yaml
@@ -5,10 +5,15 @@ name: juju-dashboard-k8s
 assumes:
   - k8s-api
   - juju >= 3.0
+display-name: Juju Dashboard k8s
 description: |
-  Kubernetes Charm for the Juju Dashboard
-summary: |
-  Kubernetes Charm for the Juju Dashboard
+  Juju Dashboard displays your controllers and models, allowing you to see the status of your deployments, manage access, run actions and configure applications.
+summary: View the real-time status of your Juju environment.
+source: https://github.com/canonical/juju-dashboard
+issues: https://github.com/canonical/juju-dashboard/issues
+website:
+  - https://juju.is
+  - https://charmhub.io
 
 containers:
   dashboard:
