Update charms to add a config option for disabling analytics.

--- a/k8s-charm/config.yaml
+++ b/k8s-charm/config.yaml
@@ -18,3 +18,7 @@ options:
     default: 8080
     description: The port to serve the dashboard on.
     type: int
+  analytics-enabled:
+    default: true
+    description: Whether Google Analytics and Sentry error tracking is enabled. This data is used to improve Juju Dashboard.
+    type: boolean
