--- a/machine-charm/config.yaml
+++ b/machine-charm/config.yaml
@@ -21,3 +21,7 @@ options:
   dns-name:
     description: DNS of the Juju dashboard.
     type: string
+  analytics-enabled:
+    default: true
+    description: Whether Google Analytics and Sentry error tracking is enabled. This data is used to improve Juju Dashboard.
+    type: boolean
