--- a/machine-charm/src/nginx.conf.template
+++ b/machine-charm/src/nginx.conf.template
@@ -30,6 +30,7 @@ server {
         try_files $uri =404; 
     }
 
+{% if is_juju == true or (is_juju is string and is_juju | lower == "true") %}
     location ~ /api$ {
         proxy_pass {{controller_ws_api}};
         proxy_http_version 1.1;
@@ -45,4 +46,5 @@ server {
         proxy_set_header Connection $connection_upgrade;
         proxy_set_header Host $host;
     }
+{% endif %}
 }
