fix: pin wheel to `0.45.1`

--- a/k8s-charm/charmcraft.yaml
+++ b/k8s-charm/charmcraft.yaml
@@ -15,4 +15,6 @@ bases:
 
 parts:
   charm:
-    charm-python-packages: [setuptools]
+    charm-python-packages:
+      - setuptools
+      - wheel==0.45.1
